spacing issue fixed top bar

--- a/public/theme/css/style.css
+++ b/public/theme/css/style.css
@@ -5109,7 +5109,7 @@ select.list-dt:focus {
 
 @media screen and (min-width : 1025px ) and (max-width:1440px) {
     .d_menu_company {
-        padding-left:3.7rem !important;
+        padding-left:1.3rem !important;
     }
     .d-Menu {
         padding-left:0px !important; 
@@ -5123,7 +5123,7 @@ select.list-dt:focus {
 
 @media screen and (min-width : 769px ) and (max-width:1024px) {
     .d_menu_company {
-        padding-left:2.8rem !important;
+        padding-left:0.8rem !important;
     }
     .d-Menu {
         padding-left:0px !important; 
@@ -5135,7 +5135,7 @@ select.list-dt:focus {
 }
 @media  screen and (min-width : 1441px ) and (max-width:1920px) {
     .d_menu_company {
-        padding-left:  6.3rem !important;
+        padding-left:  3.2rem !important;
     }
     .d-Menu {
         padding-left:0px !important; 
@@ -5162,7 +5162,7 @@ select.list-dt:focus {
 
 @media  only screen and (min-width : 2560px ) {
     .d_menu_company {
-        padding-left:  10rem !important;
+        padding-left:  5.6rem !important;
     }
     .d-Menu {
         padding-left:0px !important; 
